refactor: Replace Collectors.toList() with List.toList() for improved readability